<resources>
    <string name="app_name">UsbGps For u-blox NEO-M8U</string>
    <string name="pref_start_gps_title">Start/Stop GPS</string>
    <string name="pref_start_gps_summary_off">Usb GPS is off</string>
    <string name="pref_start_gps_summary_on">Usb GPS is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Usb GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>
    <string name="pref_replace_std_gps_summary">Disable the internal GPS and </string>
    <string name="pref_force_enable_provider_title">Auto-enable location provider</string>
    <string name="pref_force_enable_provider_summary_on">Auto-enable the location provider, even if it has been disabled</string>
    <string name="pref_force_enable_provider_summary_off">Auto-enable the location provider only if it doesn\'t exist yet</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Usb GPS name: %s</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_recording_title">Enable/Disable UBX log</string>
    <string name="pref_recording_summary">Record the USB GPS Location data</string>
    <string name="pref_recording_params_title">Recording parameters</string>
    <string name="pref_trackfile_prefix_title">Trackfiles prefix</string>
    <string name="pref_trackfile_prefix_summary">Select the prefix for the track files</string>
    <string name="pref_trackfile_directory_title">Trackfiles directory</string>
    <string name="pref_trackfile_directory_summary">Select the directory for the track files</string>
    <string name="pref_gps_device_title">Choose Usb GPS</string>
    <string name="pref_gps_device_summary">"Current device: %s"</string>
    <string name="pref_gps_device_speed_title">Choose GPS device speed</string>
    <string name="pref_gps_device_speed_summary">"Current speed: %s"</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>
    <string name="pref_sirf_gps_title">SiRF GPS</string>
    <string name="pref_sirf_gps_summary">Enable SiRF Options</string>
    <string name="pref_sirf_nmea_category_title">Choice of NMEA sentences</string>
    <string name="pref_sirf_gps_category_title">GPS operation</string>
    <string name="pref_enable_gga_title">Enable NMEA GGA</string>
    <string name="pref_enable_gga_summary_off">NMEA GGA sentences are off</string>
    <string name="pref_enable_gga_summary_on">NMEA GGA sentences are on</string>
    <string name="pref_enable_rmc_title">Enable NMEA RMC</string>
    <string name="pref_enable_rmc_summary_off">NMEA RMC sentences are off</string>
    <string name="pref_enable_rmc_summary_on">NMEA RMC sentences are on</string>
    <string name="pref_enable_gll_title">Enable NMEA GLL</string>
    <string name="pref_enable_gll_summary_off">NMEA GLL sentences are off</string>
    <string name="pref_enable_gll_summary_on">NMEA GLL sentences are on</string>
    <string name="pref_enable_vtg_title">Enable NMEA VTG</string>
    <string name="pref_enable_vtg_summary_off">NMEA VTG sentences are off</string>
    <string name="pref_enable_vtg_summary_on">NMEA VTG sentences are on</string>
    <string name="pref_enable_gsa_title">Enable NMEA GSA</string>
    <string name="pref_enable_gsa_summary_off">NMEA GSA sentences are off</string>
    <string name="pref_enable_gsa_summary_on">NMEA GSA sentences are on</string>
    <string name="pref_enable_gsv_title">Enable NMEA GSV</string>
    <string name="pref_enable_gsv_summary_off">NMEA GSV sentences are off</string>
    <string name="pref_enable_gsv_summary_on">NMEA GSV sentences are on</string>
    <string name="pref_enable_zda_title">Enable NMEA ZDA</string>
    <string name="pref_enable_zda_summary_off">NMEA ZDA sentences are off</string>
    <string name="pref_enable_zda_summary_on">NMEA ZDA sentences are on</string>
    <string name="pref_enable_sbas_title">SBAS (WAAS/EGNOS)</string>
    <string name="pref_enable_sbas_summary_off">SBAS is off</string>
    <string name="pref_enable_sbas_summary_on">SBAS is on</string>
    <string name="pref_enable_nmea_title">NMEA/Binary mode</string>
    <string name="pref_enable_nmea_summary_off">Binary mode is on</string>
    <string name="pref_enable_nmea_summary_on">NMEA mode is on</string>
    <string name="pref_enable_static_navigation_title">Static Navigation</string>
    <string name="pref_enable_static_navigation_summary_off">Static Navigation disabled</string>
    <string name="pref_enable_static_navigation_summary_on">Static Navigation enabled</string>
    <string name="pref_ubx_hnr_title">Use UBX-HNR-PVT</string>
    <string name="pref_ubx_hnr_summary">Use HighNavigationRate(only:u-blox M8U/M8L)</string>
    <string name="pref_use_speed_title">Use Ground Speed (2-D)</string>
    <string name="pref_use_speed_summary">enable: use / disable: not use</string>
    <string name="pref_use_accuracy_title">Use Accuracy</string>
    <string name="pref_use_accuracy_summary">enable: use / disable: fix 1m</string>
    <string name="pref_ubx_cfg_hnr_title">config UBX-CFG-HNR</string>
    <string name="pref_ubx_cfg_hnr_summary">Send HighNavRateValue at startup.(-1: not send / 0-30:send)</string>
    <string name="pref_ubx_cfg_hnr_key">highNavRate</string>
    <string name="pref_ubx_resetodo_title">Reset ODO at startup</string>
    <string name="pref_ubx_resetodo_summary">Send ODO reset(UBX-NAV-RESETODO) at startup.</string>
    <string name="pref_ubx_resetodo_key">resetOdo</string>
    <string name="pref_ubx_anon_title">Request AssistNowOnline at startup</string>
    <string name="pref_ubx_anon_summary">Get AssistNowOnline data at startup.(need: AssistNow Token)</string>
    <string name="pref_ubx_anon_key">AssistNowOnline</string>
    <string name="pref_ubx_anoff_title">Request AssistNowOffline at startup</string>
    <string name="pref_ubx_anoff_summary">Get AssistNowOffline data at startup.(need: AssistNow Token)</string>
    <string name="pref_ubx_anoff_key">AssistNowOffline</string>
    <string name="pref_ubx_an_token_title">AssistNow Token</string>
    <string name="pref_ubx_an_token_summary">AssistNow authorization token.</string>
    <string name="pref_ubx_an_token_key">AssistNowToken</string>
    <string name="pref_ubx_control_title">Use AssistNow FlowControl(Unimplemented)</string>
    <string name="pref_ubx_control_summary">Flow control is activated by setting the ackAiding parameter in the UBX-CFG-NAVX5 message.</string>
    <string name="pref_ubx_control_key">AssistNowControl</string>
    <string name="msg_gps_provider_started">Usb GPS... started</string>
    <string name="msg_gps_provider_stopped">Usb GPS... stopped</string>
    <string name="msg_gps_provider_already_started">Usb GPS... is already on</string>
    <string name="msg_gps_provider_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_two_many_connection_problems">Too many connection problems</string>
    <string name="msg_gps_provider_disabled">GPS is disabled</string>
    <string name="msg_gps_provider_cant_connect">Unable to connect to device</string>
    <string name="msg_mock_location_disabled">Mock locations disabled in settings</string>
    <string name="msg_mock_location_disabled_full">Mock locations disabled in settings\nClick here to enable mock locations</string>
    <string name="msg_mock_location_disabled_full_dialog_text">Mock locations disabled in settings\nOpen mock location settings?</string>
    <string name="msg_usb_provider_device_not_connected">Device not connected</string>
    <string name="msg_nmea_recording_started">GPS UBX recording... started</string>
    <string name="msg_nmea_recording_stopped">GPS UBX recording... stopped</string>
    <string name="msg_nmea_recording_already_started">GPS track recording... is already on</string>
    <string name="foreground_service_started_notification_title">UsbGps</string>
    <string name="foreground_gps_provider_started_notification">UsbGps service started</string>
    <string name="foreground_nmea_recording_started_notification">UsbGps UBX recording service started</string>
    <string name="connection_problem_notification_title">UsbGps: connection problem</string>
    <plurals name="connection_problem_notification">
        <item quantity="one">Will retry one more time before closing</item>
        <item quantity="other">Will retry %d more times before closing</item>
    </plurals>
    <string name="service_closed_because_connection_problem_notification_title">UsbGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>
    <string name="about_title">About</string>
    <string name="about_version">UsbGPS4Droid %s</string>
    <string name="about_copyright_1">Copyright (C) 2015-2017 Oliver Bell</string>
    <string name="about_copyright_2">Copyright (C) 2010-2013 Herbert von Broeuschmeul</string>
    <string name="about_copyright_3">Copyright (C) 2010-2013 BluetoothGPS4Droid Project</string>
    <string name="about_copyright_4">Copyright (C) 2011-2013 UsbGPS4Droid Project</string>
    <string name="about_copyright_5">Copyright (C) 2018-2019 Kamabokoz</string>
    <string name="pref_toast_logging_title">Show Toasts</string>
    <string name="pref_toast_logging_summary">Show debug toast messages on USB Gps status changes</string>
    <string name="pref_start_on_boot_title">Start service on boot</string>
    <string name="pref_start_on_screenOn_title">Start service on wakeup</string>
    <string name="pref_start_delay_title">Start service delay</string>
    <string name="pref_category_device_title">Device</string>
    <string name="pref_category_service_title">Service</string>
    <string name="pref_category_ubx_title">UBX</string>
    <string name="pref_category_nmea_log_title">UBX Log</string>
    <string name="pref_category_debug_title">Debug</string>
    <string name="pref_set_time_key">setTime</string>
    <string name="pref_set_time_title">Set system time from GPS (Root required)</string>
    <string name="pref_category_about_title">About</string>
    <string name="settings_button_title">Settings</string>
    <string name="rec_button_title">Record Log</string>
    <string name="mga_on_button_title">Request AssistNow Online</string>
    <string name="mga_off_button_title">Request AssistNow Online</string>
    <string name="reset_odo_button_title">Reset Odo</string>
    <string name="reset_alg_button_title">Reset Alg</string>
    <string name="debug_dr_enable_button_title">DR Test On</string>
    <string name="debug_dr_disable_button_title">DR Test Off</string>
    <string name="pref_start_on_boot_summary">If enabled, the USB GPS service will be automatically started on BOOT_COMPLETE</string>
    <string name="pref_start_on_screenOn_summary">If enabled, the USB GPS service will be automatically started on SCREEN_ON(For Android Head Unit)</string>
    <string name="pref_start_delay_summary">Startup delay time(ms)</string>
    <string name="pref_set_time_summary">Set the system time from the received GPS time</string>
    <string name="pref_daynight_theme_title">Automatic day-night app theme</string>
    <string name="pref_daynight_theme_summary">Show light theme during daytime and dark theme at night</string>
    <string name="pref_daynight_theme_key">dayNightMode</string>
    <string name="pref_mock_location_method_title">Mock Location Method</string>
    <string name="pref_mock_location_method_summary">Select the method for mock location</string>
    <string name="pref_mock_location_method_key">mockLocationMethod</string>
</resources>