<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">

    <PreferenceCategory android:title="@string/pref_category_device_title" />

    <ListPreference
        android:dialogTitle="@string/pref_mock_location_method_title"
        android:key="@string/pref_mock_location_method_key"
        android:summary="@string/pref_mock_location_method_summary"
        android:title="@string/pref_mock_location_method_title"
        android:entries="@array/pref_mock_location_method_entries"
        android:entryValues="@array/pref_mock_location_method_values"
        android:defaultValue="legacy" />

    <ListPreference
        android:dialogTitle="@string/pref_gps_device_title"
        android:key="@string/pref_gps_device_key"
        android:summary="@string/pref_gps_device_summary"
        android:title="@string/pref_gps_device_title"
        android:dependency="@string/pref_start_gps_key" />

    <ListPreference
        android:defaultValue="@string/defaultGpsDeviceSpeed"
        android:dependency="@string/pref_start_gps_key"
        android:dialogTitle="@string/pref_gps_device_speed_title"
        android:entries="@array/pref_gps_device_speed_values"
        android:entryValues="@array/pref_gps_device_speed_values"
        android:key="@string/pref_gps_device_speed_key"
        android:persistent="true"
        android:title="@string/pref_gps_device_speed_title"
        android:enabled="true" />

    <MultiSelectListPreference
        android:key="lsposedAllowedApps"
        android:title="?string/pref_lsposed_allowed_apps_title"
        android:summary="?string/pref_lsposed_allowed_apps_summary"
        android:dialogTitle="?string/pref_lsposed_allowed_apps_dialog_title"
        android:defaultValue="@array/empty_array"
        android:entries="@array/empty_array"
        android:entryValues="@array/empty_array"
        />

    <PreferenceCategory android:title="@string/pref_category_service_title" />

    <SwitchPreference
        android:key="@string/pref_start_gps_key"
        android:title="@string/pref_start_gps_title"
        android:summaryOn="@string/pref_start_gps_summary_on"
        android:summaryOff="@string/pref_start_gps_summary_off"
        android:persistent="true"
        android:disableDependentsState="true" />

    <CheckBoxPreference
        android:key="@string/pref_start_on_boot_key"
        android:title="@string/pref_start_on_boot_title"
        android:summary="@string/pref_start_on_boot_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/pref_start_on_screenOn_key"
        android:title="@string/pref_start_on_screenOn_title"
        android:summary="@string/pref_start_on_screenOn_summary"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="@string/pref_start_delay_key"
        android:title="@string/pref_start_delay_title"
        android:summary="@string/pref_start_delay_summary"
        android:defaultValue="10000" />

    <Preference
        android:key="@string/pref_gps_location_provider_key"
        android:title="@string/pref_gps_location_provider_title"
        android:summary="@string/pref_gps_location_provider_summary"
        android:dependency="@string/pref_start_gps_key" />

    <CheckBoxPreference
        android:key="@string/pref_set_time_key"
        android:title="@string/pref_set_time_title"
        android:summary="@string/pref_set_time_summary"
        android:defaultValue="false" />

    <PreferenceCategory android:title="@string/pref_category_ubx_title" />

    <SwitchPreference
        android:key="@string/pref_ubx_hnr_key"
        android:title="@string/pref_ubx_hnr_title"
        android:summary="@string/pref_ubx_hnr_summary"
        android:defaultValue="false"
        android:persistent="true"
        android:disableDependentsState="false" />

    <EditTextPreference
        android:key="@string/pref_ubx_cfg_hnr_key"
        android:title="@string/pref_ubx_cfg_hnr_title"
        android:summary="@string/pref_ubx_cfg_hnr_summary"
        android:defaultValue="10" />

    <SwitchPreference
        android:key="@string/pref_ubx_resetodo_key"
        android:title="@string/pref_ubx_resetodo_title"
        android:summary="@string/pref_ubx_resetodo_summary"
        android:defaultValue="false"
        android:persistent="true"
        android:disableDependentsState="false" />

    <SwitchPreference
        android:key="@string/pref_ubx_anon_key"
        android:title="@string/pref_ubx_anon_title"
        android:summary="@string/pref_ubx_anon_summary"
        android:defaultValue="false"
        android:persistent="true"
        android:disableDependentsState="false" />

    <SwitchPreference
        android:key="@string/pref_ubx_anoff_key"
        android:title="@string/pref_ubx_anoff_title"
        android:summary="@string/pref_ubx_anoff_summary"
        android:defaultValue="false"
        android:persistent="true"
        android:disableDependentsState="false" />

    <EditTextPreference
        android:key="@string/pref_ubx_an_token_key"
        android:title="@string/pref_ubx_an_token_title"
        android:summary="@string/pref_ubx_an_token_summary"
        android:defaultValue="" />

    <PreferenceCategory android:title="@string/pref_category_nmea_log_title" />

    <SwitchPreference
        android:key="@string/pref_recording_key"
        android:title="@string/pref_recording_title"
        android:summary="@string/pref_recording_summary"
        android:enabled="true" />

    <Preference
        android:key="@string/pref_recording_screen_key"
        android:title="@string/pref_recording_params_title" />

    <PreferenceCategory android:title="@string/pref_category_about_title" />

    <Preference
        android:key="@string/pref_about_key"
        android:title="@string/pref_about_title"
        android:summary="@string/pref_about_summary"
        android:persistent="false" />

    <PreferenceCategory android:title="@string/pref_category_debug_title" />

    <SwitchPreference
        android:key="@string/pref_toast_logging_key"
        android:title="@string/pref_toast_logging_title"
        android:summary="@string/pref_toast_logging_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="@string/pref_daynight_theme_key"
        android:title="@string/pref_daynight_theme_title"
        android:summary="@string/pref_daynight_theme_summary"
        android:defaultValue="true" />

</PreferenceScreen>
